--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-footer.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-header.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/6-filters.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/8-places.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/icon.png') }}" type="image/x-icon">
-  </head>
-  <body>
+    </head>
+    <body>
     <header>
       <img src="{{ url_for('static', filename='images/logo.png') }}" alt="logo">
     </header>
@@ -41,6 +42,29 @@
           </ul>
         </div>
         <button class="search">Search</button>
+      </section>
+      <section class="places">
+                <h1>Places</h1>
+		{% for place in places.values()|sort(attribute="name") %}
+                <div class="places-container">
+                    <article>
+                        <div>
+                            <h2>{{ place.name }}</h2>
+                            <div class="price_by_night">&#36;{{ place.price_by_night }}</div>
+                        </div>
+                        <div class="information">
+                            <div class="max_guest">{{ place.max_guest }} Guests</div>
+                            <div class="number_rooms">{{ place.number_rooms }} Rooms</div>
+                            <div class="number_bathrooms">{{ place.number_bathrooms }} Bathrooms</div>
+                        </div>
+                        <div class="user">
+				<b>Owner:</b> {{ place.user.first_name }} {{
+            place.user.last_name }}
+                        </div>
+                        <div class="description">{{ place.description|safe }}
+                        </div>
+			</article>
+        {% endfor %}
       </section>
     </div>
     <footer>Best School</footer>
